[package]
name = "tigray"
description = "micro-service with axum"
version = "0.1.0"
authors = ["Keng Lim<lionkeng@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.4" }
axum-debug = "0.2"
config = { version = "0.11" }
dotenv = { version = "0.15.0" }
env_logger = "*"
futures = { version = "0.3" }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
] }
strum = "0.23.0"
strum_macros = "0.23.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.1", features = [
  "add-extension",
  "compression",
  "trace",
  "compression-gzip",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
